# research_assistant

./: .gitignore  Dockerfile  azure-deploy-jenkins.sh  build-and-push-docker-image.sh  main.py  pyproject.toml  requirements.txt  setup-app-infrastructure.sh  users.db
notebook/: test.ipynb
research_and_analyst/api/: main.py
research_and_analyst/utils/: model_loader.py
research_and_analyst/workflows/: interview_workflow.py  report_generator_workflow.py
